# its-camera-ai

its-camera-ai/: .dockerignore  .env.docker.example  .env.example  .env.production.example  .env.staging.example  .gitignore  .pre-commit-config.yaml  AGENT_TEAM_ASSIGNMENTS.md  ANALYTICS_API_IMPLEMENTATION.md  AUTHENTICATION_IMPLEMENTATION.md  BLOSC_IMPLEMENTATION_SUMMARY.md  CI_CD_README.md  CLAUDE.md  CLI_BACKEND_INTEGRATION.md  CLI_ENHANCEMENTS.md  CORE_VISION_ENGINE_DESIGN.md  DATABASE_OPTIMIZATION_GUIDE.md  DEVELOPMENT_STANDARDS.md  DOCKER.md  DOCKER_DEPLOYMENT_GUIDE.md  DOCKER_SETUP.md  Dockerfile  FRONTEND_SETUP.md  IMPLEMENTATION_ROADMAP.md  INFRASTRUCTURE_COMPLETE.md  INFRASTRUCTURE_IMPLEMENTATION_TASKS.md  ISSUE_TRACKER.md  KAFKA_SSE_IMPLEMENTATION.md  ML_PIPELINE_INTEGRATION.md  MODEL_UPLOAD_README.md  Makefile  OPTIMIZATION_DEPLOYMENT_GUIDE.md  PERFORMANCE_OPTIMIZATION.md  PLATFORM_ENGINEERING_SUMMARY.md  PREPROCESSING_OPTIMIZATION_GUIDE.md  PRODUCTION_DEPLOYMENT_PLAN.md  PRODUCTION_MONITORING_SUMMARY.md  PRODUCTION_PIPELINE_SUMMARY.md  README.md  REDIS_MIGRATION_SUMMARY.md  (+44 more)
its-camera-ai/.claude/agents/: ai-camera-product-strategist.md  backend-developer.md  cv-inference-optimizer.md  fastapi-backend-architect.md  fastapi-test-automation-expert.md  machine-learning-engineer.md  nextjs-expert.md  postgres-performance-optimizer.md  postgres-sqlalchemy-expert.md  prp-context-engineer.md  python-architect-advisor.md  python-pro.md  react-specialist.md  refactor-pro.md  ux-design-consultant.md
its-camera-ai/.github/workflows/: ci.yml  deployment.yml  docker-ci-cd.yml  docker-cicd.yml  docker-quality-gates.yml  release.yml
its-camera-ai/.serena/: project.yml
its-camera-ai/.serena/memories/: code_style_conventions.md  codebase_architecture.md  project_overview.md  suggested_commands.md  task_completion_checklist.md
its-camera-ai/alembic/: env.py  script.py.mako
its-camera-ai/alembic/versions/: 001_initial_schema.py  002_analytics_models.py
its-camera-ai/charts/its-camera-ai/: values-production.yaml
its-camera-ai/config/: alert_service_example.yaml  kafka_sse_config.example.yaml
its-camera-ai/config/nginx/: nginx.conf
its-camera-ai/database/: migration_strategy.sql  partitioning_setup.sql  pgbouncer_config.ini  schema_setup.sql  timescaledb_continuous_aggregates.sql  timescaledb_setup.sql
its-camera-ai/docker/: Dockerfile  README.md  docker-compose.complete.yml  docker-compose.dev.yml  docker-compose.edge.yml  docker-compose.gpu.yml  docker-compose.infrastructure.yml  docker-compose.monitoring.yml  docker-compose.override.example.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
its-camera-ai/docs/: API_INTEGRATION_GUIDE.md  DEPLOYMENT_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN.md  INFRASTRUCTURE_STATUS.md  LPR_OPTIMIZATION_GUIDE.md  PROJECT_ANALYSIS_REPORT.md  README.md  REDIS_MIGRATION_GUIDE.md  VAULT_SECRETS_MANAGEMENT.md  architect-draft.md  ci-cd-setup.md  feature-roadmap.md  market-analysis.md  product-strategy.md  resource-planning.md  risk-assessment.md  success-metrics.md  technical-strategy.md
its-camera-ai/docs/architecture/: ANALYTICS_ARCHITECTURE.md  RISK_MITIGATION.md  architectural-patterns.md  (+1 more)
its-camera-ai/examples/: performance_benchmark.py  redis_queue_config.json  service_mesh_demo.py  streaming_service_demo.py  vision_engine_demo.py
its-camera-ai/infrastructure/: README.md
its-camera-ai/migrations/: analytics_migration.py  auth_system_migration.py
its-camera-ai/monitoring/: README.md
its-camera-ai/proto/: alert_service.proto  analytics_service.proto  processed_frame.proto  streaming_service.proto
its-camera-ai/script/: deploy-minio.sh  start-gpu.sh  start-infrastructure.sh  start-prod.sh
its-camera-ai/scripts/: benchmark_inference.py  deploy-database.sh  deploy-frontend.sh  deploy-gitops.sh  deploy-monitoring-stack.sh  deploy-monitoring.sh  deploy-production.sh  deploy.sh  deploy_auth_system.py  deploy_optimized_lpr.py  download_test_models.py  generate_performance_report.py  generate_protos.py  optimize_models.py  quickstart.sh  run_ml_pipeline_tests.py  run_ml_streaming_pipeline.py  security-setup.sh  seed_database.py  setup-dev.sh  setup-vault.sh  start-workers.sh  validate-docker-setup.sh  validate_security_fixes.py
its-camera-ai/security/: __init__.py  incident_response.py  production_hardening.py  vulnerability_scanner.py  zero_trust_architecture.py
its-camera-ai/tests/: __init__.py  conftest.py  test_alert_service.py  test_analytics_service.py  test_auth_service.py  test_blosc_compression_integration.py  test_camera_stream_orchestrator_integration.py  test_comprehensive_performance_benchmark.py  test_containers_basic.py  test_dependency_injection.py  test_grpc_serialization.py  test_kafka_event_producer.py  test_kafka_sse_integration.py  test_lpr_performance_optimization.py  test_ml_annotation_processor.py  test_ml_pipeline_integration.py  test_ml_streaming_performance.py  test_mp4_encoder_system.py  test_optimized_system_integration.py  test_performance_benchmarks.py  test_performance_optimization.py  test_redis_queue_manager.py  test_reliability_improvements.md  test_security_fixes.py  test_security_middleware.py  test_service_mesh_integration.py  test_sse_core.py  test_sse_streaming_service.py  test_streaming_ml_integration.py  test_streaming_processor_redis.py  test_streaming_service.py  test_streaming_service_core.py
its-camera-ai/web/: .gitignore  .lintstagedrc.json  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  ANALYTICS_API_INTEGRATION_TASKS.md  CLAUDE.md  COMPONENT_SPECIFICATIONS.md  DESIGN_SYSTEM_SPECIFICATIONS.md  DESIGN_SYSTEM_TASK_CARDS.md  Dockerfile  Dockerfile.test  IMPLEMENTATION_PRIORITY_GUIDE.md  IMPLEMENTATION_ROADMAP.md  PAGE_DESIGN_PROTOTYPES.md  README.md  TASK_BREAKDOWN_ITS_DASHBOARD.md  UX_GUIDELINES_AND_IMPLEMENTATION.md  VALIDATION_CHECKLIST.md  docker-compose.test.yml  eslint.config.mjs  jest-e2e.config.js  jest-puppeteer.config.js  middleware.ts  next.config.ts  notes.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
(+581 files in other folders)
